added operation selectors
